# modbus-bridge-rs

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  CODEOWNERS  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  release-please-config.json
.github/workflows/: ci.yml  publish.yml  release-please.yml
.release-please/: manifest.json  release-please.yaml
docs/superpowers/specs/: 2026-05-11-rtu-tcp-client-design.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_client_session.rs  fuzz_frame.rs
src/: bridge.rs  builder.rs  capacity.rs  client.rs  client_builder.rs  client_session.rs  connection.rs  error.rs  event.rs  frame.rs  lib.rs  rtu.rs  tcp.rs
tests/: integration.rs  tokio_integration.rs
