[package]
name = "modbus-bridge"
version = "0.2.0"
edition = "2021"
rust-version = "1.81"
description = "Portable no_std Modbus RTU/TCP bridge — async and blocking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rand12345/modbus-bridge-rs"
documentation = "https://docs.rs/modbus-bridge"
readme = "README.md"
keywords = ["modbus", "rtu", "tcp", "bridge", "no-std"]
categories = ["embedded", "network-programming", "no-std"]
exclude = [
    "fuzz/",
    ".cargo/",
    "CLAUDE.md",
]

[features]
default = ["async"]
async   = ["dep:embedded-io-async", "dep:embedded-hal-async", "dep:futures-util"]
sync    = ["dep:embedded-io"]
defmt   = ["dep:defmt"]
log     = ["dep:log"]

[dev-dependencies]
futures = { version = "0.3", default-features = false, features = ["executor", "std"] }

[dependencies]
heapless          = { version = "0.8", default-features = false }
embedded-hal      = "1.0"
embedded-io-async   = { version = "0.6", optional = true }
embedded-io         = { version = "0.6", optional = true }
embedded-hal-async  = { version = "1.0", optional = true }
futures-util        = { version = "0.3", default-features = false, optional = true }
defmt             = { version = "0.3", optional = true }
log               = { version = "0.4", default-features = false, optional = true }
