[package]
name = "modbus-bridge"
version = "0.3.1"
edition = "2021"
rust-version = "1.81"
description = "Portable no_std Modbus RTU/TCP bridge — async and blocking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rand12345/modbus-bridge-rs"
documentation = "https://docs.rs/modbus-bridge"
readme = "README.md"
keywords = ["modbus", "rtu", "tcp", "bridge", "no-std"]
categories = ["embedded", "network-programming", "no-std"]
exclude = [
    "fuzz/",
    ".cargo/",
    ".github/",
    "docs/",
    "CLAUDE.md",
]

[features]
default = ["async"]
async   = ["dep:embedded-io-async", "dep:embedded-hal-async", "dep:futures-util"]
sync    = ["dep:embedded-io"]
defmt   = ["dep:defmt"]
log     = ["dep:log"]
tokio-integration = []        # gate for in-process tokio integration tests

[dev-dependencies]
futures              = { version = "0.3", default-features = false, features = ["executor", "std"] }
tokio                = { version = "1", features = ["full"] }
tokio-modbus         = { version = "0.17", default-features = false, features = ["tcp"] }
embedded-io-adapters = { version = "0.7", features = ["tokio-1"] }

[[test]]
name = "tokio_integration"
required-features = ["tokio-integration"]

[dependencies]
heapless          = { version = "0.8", default-features = false }
embedded-hal      = "1.0"
embedded-io-async   = { version = "0.7", optional = true }
embedded-io         = { version = "0.7", optional = true }
embedded-hal-async  = { version = "1.0", optional = true }
futures-util        = { version = "0.3", default-features = false, optional = true }
defmt             = { version = "0.3", optional = true }
log               = { version = "0.4", default-features = false, optional = true }
